--- a/www/index.html
+++ b/www/index.html
@@ -170,6 +170,7 @@
     <script src="app/spot/sed/lithologies/lithologies-tab.directive.js"></script>
     <script src="app/spot/sed/structures/structures-tab.directive.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.directive.js"></script>
+    <script src="app/spot/spot/spot.directive.js"></script>
     <script src="app/spot/spot-tab/spot-tab.directive.js"></script>
     <script src="app/spot/tabs/spot-tabs.directive.js"></script>
     <script src="app/spots/spots.directive.js"></script>
