--- a/www/index.html
+++ b/www/index.html
@@ -149,6 +149,7 @@
     <script src="app/maps/image-basemaps/image-basemaps.directive.js"></script>
     <script src="app/maps/strat-section/spots-this-map.directive.js"></script>
     <script src="app/maps/strat-sections/strat-sections.directive.js"></script>
+    <script src="app/maps/thin-section/thin-section.directive.js"></script>
     <script src="app/maps/thin-sections/thin-sections.directive.js"></script>
     <script src="app/maps/other-maps/other-maps.directive.js"></script>
     <script src="app/misc/misc.directive.js"></script>
