Minerals: word changes made to mindat.org link

--- a/www/app/spot/minerals/minerals-modal.html
+++ b/www/app/spot/minerals/minerals-modal.html
@@ -55,9 +55,9 @@
           </div><br>
           <div class="row">
             <!-- <div class=" mineral-title"><i name="icon ion-globe"></i></div>          -->
-            <a class="" id="mineral-link" ng-href="{{vm.mineralInfo['mindat.org link']}}" target="blank">
+            <a class="" id="mineral-link" ng-href="{{vmChild.mineralInfo['mindat.org link']}}" target="blank">
               <i class="web-icon icon ion-android-globe"></i>
-              Click here for more mineral info from Mindat.org
+              Click here for more mineral information on {{vmChild.mineralInfo.Mineral}} from Mindat.org
             </a>
           </div>
         </div>
