Minerals: displayed minerals in "Add Mineral Tags" modal

--- a/www/app/spot/minerals/add-mineral-tag-modal.html
+++ b/www/app/spot/minerals/add-mineral-tag-modal.html
@@ -13,7 +13,9 @@
                   ng-checked='vm.isTagChecked(tag)'
                   ng-click='vm.toggleTagChecked(tag)'>
       <b>{{ tag.name }}</b>
-      <strabo-tags-list-properties-directive></strabo-tags-list-properties-directive>
+      <strabo-tags-list-properties-directive></strabo-tags-list-properties-directive><br>
+      (<span ng-repeat="mineral in tag.minerals | orderBy: mineral track by $index">{{vmChild.getLabel(mineral) }}<span 
+        ng-hide="$last">, </span></span>)
     </ion-checkbox>
   </ion-content>
 </ion-modal-view>
