--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -104,6 +104,8 @@
     <script src="app/spot/3d-structures/3dstructures-tab.controller.js"></script>
     <script src="app/spot/data/data-tab.controller.js"></script>
     <script src="app/spot/images/images-tab.controller.js"></script>
+    <script src="app/spot/micro/experimental-results/experimental-results-tab.controller.js"></script>
+    <script src="app/spot/micro/experimental-set-up/experimental-set-up-tab.controller.js"></script>
     <script src="app/spot/micro/thin-section/thin-section-tab.controller.js"></script>
     <script src="app/spot/minerals/minerals-tab.controller.js"></script>
     <script src="app/spot/nesting/nesting-tab.controller.js"></script>
@@ -178,6 +180,8 @@
     <script src="app/spot/3d-structures/3dstructures-tab.directive.js"></script>
     <script src="app/spot/data/data-tab.directive.js"></script>
     <script src="app/spot/images/images-tab.directive.js"></script>
+    <script src="app/spot/micro/experimental-results/experimental-results-tab.directive.js"></script>
+    <script src="app/spot/micro/experimental-set-up/experimental-set-up-tab.directive.js"></script>
     <script src="app/spot/micro/thin-section/thin-section-tab.directive.js"></script>
     <script src="app/spot/minerals/minerals-tab.directive.js"></script>
     <script src="app/spot/nesting/nesting-tab.directive.js"></script>
