Micro: Added Experimental Samples

--- a/www/app/shared/select-spot-modal.html
+++ b/www/app/shared/select-spot-modal.html
@@ -3,7 +3,7 @@
     <button class='button button-clear' ng-click='vmChild.selectSpotModal.hide()'>
       <span class='icon ion-arrow-left-c'></span>
     </button>
-    <h1 class='title'>Select Spots to Link as Subsample Spots</h1>
+    <h1 class='title'>Select Spots to Link as Sample/Subsample Spots</h1>
     <div class='buttons'>
       <button class='button button-icon ion-levels rotate-90' ng-click='vm.addFilters()'></button>
       <button class='icon ion-close-round close-modal-button'
