--- a/www/app/spot/samples/samples-tab.directive.html
+++ b/www/app/spot/samples/samples-tab.directive.html
@@ -1,18 +1,33 @@
 <div>
-  <button ng-click='vmChild.addSample()'
+  <button ng-click='vmChild.addSample("field")'
           class='button button-clear button-positive'>
     <i class='icon ion-plus-circled'></i>
-    <span class='button-text-big'>Add Sample Data to this Spot</span>
+    <span class='button-text-big'
+          ng-style='!vmChild.getIsWeb() && {"font-size": "x-small"}'>Add Field Sample Data to this Spot</span>
   </button>
-  <button ng-click='vmChild.addSubsample()'
+  <button ng-click='vmChild.addSample("experimental")'
           class='button button-clear button-positive'>
     <i class='icon ion-plus-circled'></i>
-    <span class='button-text-big'>Add a New Sample/Subsample Spot</span>
+    <span class='button-text-big'
+          ng-style='!vmChild.getIsWeb() && {"font-size": "x-small"}'>Add Experimental Sample Data to this Spot</span>
+  </button>
+  <button ng-click='vmChild.addSubsample("field")'
+          class='button button-clear button-positive'>
+    <i class='icon ion-plus-circled'></i>
+    <span class='button-text-big'
+          ng-style='!vmChild.getIsWeb() && {"font-size": "x-small"}'>Add a New Sample/Subsample Spot</span>
+  </button>
+  <button ng-click='vmChild.addSubsample("experimental")'
+          class='button button-clear button-positive'>
+    <i class='icon ion-plus-circled'></i>
+    <span class='button-text-big'
+          ng-style='!vmChild.getIsWeb() && {"font-size": "x-small"}'>Add a New Experimental Sample/Subsample Spot</span>
   </button>
   <button ng-click='vmChild.addExistingSubsample()'
           class='button button-clear button-positive'>
     <i class='icon ion-plus-circled'></i>
-    <span class='button-text-big'>Link to an Existing Sample/Subsample Spot</span>
+    <span class='button-text-big'
+          ng-style='!vmChild.getIsWeb() && {"font-size": "x-small"}'>Link to an Existing Sample/Subsample Spot</span>
   </button>
   <div class="padding" ng-show="vmChild.samples.length === 0 && vmChild.subsamples.length === 0">
     There are no samples at this Spot.
