--- a/www/index.html
+++ b/www/index.html
@@ -138,6 +138,7 @@
     <script src="app/form/auto-fields.directive.js"></script>
     <script src="app/tag/concept.directive.js"></script>
     <script src="app/tag/documentation.directive.js"></script>
+    <script src="app/tag/experimental-apparatus.directive.js"></script>
     <script src="app/tag/geologic-unit.directive.js"></script>
     <script src="app/tag/list.directive.js"></script>
     <script src="app/tag/other.directive.js"></script>
