--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -66,7 +66,7 @@
           Strat Sections
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/thin-sections' ng-show='vm.showMicrographWorkspace()'>
-          Micrographs
+          Micrograph References
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/other-maps'>
           Other Basemaps
