Nesting: Find 10 generations up and down & moved generations calculation to SpotFactory

--- a/www/app/maps/thin-section/thin-section.directive.html
+++ b/www/app/maps/thin-section/thin-section.directive.html
@@ -8,6 +8,11 @@
         <span ng-if='vm.parentGenerations.length - $index - 1 === 2'>3rd</span>
         <span ng-if='vm.parentGenerations.length - $index - 1 === 3'>4th</span>
         <span ng-if='vm.parentGenerations.length - $index - 1 === 4'>5th</span>
+        <span ng-if='vm.parentGenerations.length - $index - 1 === 5'>6th</span>
+        <span ng-if='vm.parentGenerations.length - $index - 1 === 6'>7th</span>
+        <span ng-if='vm.parentGenerations.length - $index - 1 === 7'>8th</span>
+        <span ng-if='vm.parentGenerations.length - $index - 1 === 8'>9th</span>
+        <span ng-if='vm.parentGenerations.length - $index - 1 === 9'>10th</span>
         <span>Generation Parents</span>
         <div class='nest-block'>
           <div ng-repeat='spot in generation'>
@@ -27,7 +32,7 @@
     </div>
 
     <div>
-      <b>THIS SPOT</b>
+      <b>MICROGRAPH REFERENCE</b>
       <div class='nest-block' class='nest-block'>
         <div ng-repeat='spot in [vm.thisSpotWithThinSection]'>
           <strabo-spot-directive></strabo-spot-directive>
@@ -51,6 +56,11 @@
         <span ng-if='$index === 2'>3rd</span>
         <span ng-if='$index === 3'>4th</span>
         <span ng-if='$index === 4'>5th</span>
+        <span ng-if='$index === 5'>6th</span>
+        <span ng-if='$index === 6'>7th</span>
+        <span ng-if='$index === 7'>8th</span>
+        <span ng-if='$index === 8'>9th</span>
+        <span ng-if='$index === 9'>10th</span>
         <span>Generation Children</span>
         <div class='nest-block'>
           <div ng-repeat='spot in generation'>
