--- a/www/app/spot/samples/select-sample-spot-modal.html
+++ b/www/app/spot/samples/select-sample-spot-modal.html
@@ -1,13 +1,12 @@
 <ion-modal-view>
   <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
-    <button class='button button-clear' ng-click='vmChild.selectSpotModal.hide()'>
+    <button class='button button-clear' ng-click='vmChild.selectSampleSpotModal.hide()'>
       <span class='icon ion-arrow-left-c'></span>
     </button>
-    <h1 class='title'>Select Spots to Link as Sample/Subsample Spots</h1>
+    <h1 class='title'>Select Spots to Nest as Sample/Subsample Spots</h1>
     <div class='buttons'>
-      <button class='button button-icon ion-levels rotate-90' ng-click='vm.addFilters()'></button>
       <button class='icon ion-close-round close-modal-button'
-              ng-click='vmChild.selectSpotModal.hide()'>
+              ng-click='vmChild.selectSampleSpotModal.hide()'>
       </button>
     </div>
   </ion-header-bar>
