Micro: Expermental modal close button updated

--- a/www/app/spot/micro/experimental/experimental-modal.html
+++ b/www/app/spot/micro/experimental/experimental-modal.html
@@ -4,7 +4,7 @@
       </button>
       <h1 class='title'>{{ vmChild.modalTitle }}</h1>
       <div class='buttons'>
-        <button class='icon ion-close-round close-modal-button' ng-click='vmChild.experimentalModal.hide()'>
+        <button class='icon ion-close-round close-modal-button' ng-click='vmChild.closeExperimentalModal()'>
         </button>
       </div>
     </ion-header-bar>
