Micro: added updated KOBO forms and added General Rig btn

--- a/www/app/spot/micro/experimental/experimental-tab.directive.html
+++ b/www/app/spot/micro/experimental/experimental-tab.directive.html
@@ -1,4 +1,9 @@
 <div>
+		<button ng-click='vmChild.addARig("general")'
+		class='button button-clear button-positive'>
+<i class='icon ion-plus-circled'></i>
+<span class='button-text-big'>Add a General Rig</span>
+</button>
 		<button ng-click='vmChild.addARig("griggs")'
 						class='button button-clear button-positive'>
 			<i class='icon ion-plus-circled'></i>
