Micro: Use Exp instead of Rig

--- a/www/app/spot/micro/experimental/experimental-tab.directive.html
+++ b/www/app/spot/micro/experimental/experimental-tab.directive.html
@@ -2,22 +2,22 @@
 		<button ng-click='vmChild.addARig("general")'
 		class='button button-clear button-positive'>
 <i class='icon ion-plus-circled'></i>
-<span class='button-text-big'>Add a General Rig</span>
+<span class='button-text-big'>Add General Exp</span>
 </button>
 		<button ng-click='vmChild.addARig("griggs")'
 						class='button button-clear button-positive'>
 			<i class='icon ion-plus-circled'></i>
-			<span class='button-text-big'>Add a Griggs Rig</span>
+			<span class='button-text-big'>Add Griggs Exp</span>
 		</button>
 		<button ng-click='vmChild.addARig("heard")'
 						class='button button-clear button-positive'>
 			<i class='icon ion-plus-circled'></i>
-			<span class='button-text-big'>Add a Heard Rig</span>
+			<span class='button-text-big'>Add Heard Exp</span>
 		</button>
 		<button ng-click='vmChild.addARig("paterson")'
 						class='button button-clear button-positive'>
 			<i class='icon ion-plus-circled'></i>
-			<span class='button-text-big'>Add a Patterson Rig</span>
+			<span class='button-text-big'>Add Paterson Exp</span>
 		</button>
 		<ion-list>
 			<ion-item class='item-text-wrap item-button-right'
