--- a/www/app/spot/data/data-tab.directive.html
+++ b/www/app/spot/data/data-tab.directive.html
@@ -1,6 +1,5 @@
 <div>
 	<div class="item item-divider">Links To External Data</div>
-
 	<div class="item item-input-inset">
 		<label class="item item-input-wrapper ">
 			<input type="url" placeholder="http://" ng-model="vmChild.url">
@@ -19,6 +18,25 @@
 					<i class='icon ion-edit'></i>
 				</button>
 				<button class='button button-clear button-assertive' ng-click='vmChild.deleteLink(url)'>
+					<i class='icon ion-minus-circled'></i>
+				</button>
+			</div>
+		</ion-item>
+	</ion-list>
+	<div class="item item-divider">CSV Files</div>
+	<ion-item ng-show="vmChild.isWeb()" class="button-text-big " ng-click='vmChild.importData()' ng-model='vmChild.importItem'>
+		<img class='strabo-icon' type='file' id='file' src='img/import-project.png'> Import CSV File
+	</ion-item>
+	<div class="padding" ng-hide="vm.spot.properties.data || vm.spot.properties.data.json">
+		There are no CSV files to display
+	</div>
+	<ion-list ng-show="vm.spot.properties.data && vm.spot.properties.data.csv">
+		<ion-item class='item-text-wrap item-button-right' ng-repeat="csvFile in vm.spot.properties.data.csv | orderBy: 'fileName' track by $index ">
+			<div ng-click="vmChild.viewCSVFile(csvFile)" class="list-sub">
+				<b>{{csvFile.fileName}}</b>
+			</div>
+			<div class="buttons">
+				<button class='button button-clear button-assertive' ng-click='vmChild.deleteCSV(csvFile)'>
 					<i class='icon ion-minus-circled'></i>
 				</button>
 			</div>
