--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -11,10 +11,6 @@
     ------------------------------------------------------------------->
     <!-- jQuery -->
     <script type="text/javascript" src="lib/jquery.min.js"></script>
-    <!-- Golden Layout -->
-    <script type="text/javascript" src="lib/goldenlayout/goldenlayout.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="lib/goldenlayout/goldenlayout-base.css"/>
-    <link type="text/css" rel="stylesheet" href="lib/goldenlayout/goldenlayout-light-theme.css"/>
     <!-- Bootstrap -->
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -63,6 +59,7 @@
     STRABO FILES
     ------------------------------------------------------------------->
     <!-- stylesheets -->
+    <link href="https://fonts.googleapis.com/css?family=Kreon|Pathway+Gothic+One|Ropa+Sans|Yantramanav" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style.web.css" rel="stylesheet">
 
@@ -210,12 +207,6 @@
     <script src="app/tag/tag.directive.js"></script>
     <script src="app/tags/tags.directive.js"></script>
     <script src="app/user/user.directive.js"></script>
-
-    <!-- golden layout test (web only) -->
-    <script src="app/dashboard/dashboard.module.js"></script>
-    <script src="app/dashboard/dashboard.controller.js"></script>
-    <script src="app/dashboard/user.controller.js"></script>
-    <script src="app/dashboard/user-details.controller.js"></script>
 
     <!-- map side panel (web only) -->
     <script src="app/maps/side-panel/side-panel.controller.js"></script>
