--- a/www/app/maps/offline-maps/downloading-modal.html
+++ b/www/app/maps/offline-maps/downloading-modal.html
@@ -3,16 +3,13 @@
     <button class='button button-clear' ng-click='vm.downloadingModal.hide()'>
       <span class='icon ion-arrow-left-c'></span>
     </button>
-    <h1 class='title'>Downloading Tiles</h1>
+    <h1 class='title'>Downloading Map</h1>
   </ion-header-bar>
   <ion-content class='has-header'>
-    <div class='padding' ng-show='vm.map.percentDownload >= 0'>
+    <div class='padding'>
       <br>
-      Attempting to download and save basemap tiles:
+      {{ vm.map.progress.message }}
       <progress ng-value='vm.map.percentDownload' max='100'></progress>
-      Number of tiles successful: {{ vm.map.progress.success }} / {{ vm.map.progress.total }}
-      <br>
-      Number of tiles failed: {{ vm.map.progress.failed }} / {{ vm.map.progress.total }}
     </div>
     </ion-checkbox>
   </ion-content>
