--- a/www/app/maps/offline-maps/archive-tiles.html
+++ b/www/app/maps/offline-maps/archive-tiles.html
@@ -17,31 +17,37 @@
       <input type='text' ng-model='vm.map.name' autofocus>
     </ion-input>
 
-    <h5>Select zoom levels to download:</h5>
+    <div align='center' ng-show='vm.map.existCount'>
+      <b>{{ vm.map.existCount }} Tiles already on device for this map.</b>
+    </div>
 
-
+    <h5>Select max zoom level to download:</h5>
     <ion-input class='item item-input item-select item-text-wrap'>
-      <ion-label>Maximum Zoom Level...</ion-label>
+      <ion-label>Zoom Level...</ion-label>
       <select ng-model='vm.selectedMaxZoom'
               ng-options='z.zoom for z in vm.zoomOptions'
               ng-change='vm.maxZoomLevelChanged()'>
       </select>
     </ion-input>
 
-
-
-
-    * Zoom in or out on the map to show more zoom levels.<br>
-    * Double check your map before downloading higher zoom levels.<br>
     <br>
     <div ng-show='vm.showSubmitButton'>
       <b>Number of tiles to download: {{ vm.map.tileCount }} <br></b>
 
       <button class='button button-block button-positive' ng-click='vm.submit()'
-              ng-disabled='vm.downloading || vm.map.tileCount === 0'>
+              ng-disabled='vm.downloading'>
        {{ vm.submitBtnText }}
       </button>
     </div>
+
+    <!--
+    <button class='button button-block button-positive' ng-click='vm.unzipAgain()'>
+     Unzip Again
+    </button>
+  -->
+
+    * Zoom in or out on the map to show more zoom levels.<br>
+    * Double check your map before downloading higher zoom levels.<br>
     * Offline Maps are loaded automatically when offline.<br>
     * Edit and delete options for Saved Maps will be available under the Offline Maps menu item.
   </ion-content>
