--- a/www/app/maps/offline-maps/offline-map.html
+++ b/www/app/maps/offline-maps/offline-map.html
@@ -3,7 +3,7 @@
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <button ng-click='vm.clearOfflineTile();' class='button button-icon icon ion-trash-b'
+    <button ng-click='vm.clearOfflineTile(vm.maps);' class='button button-icon icon ion-trash-b'
             ng-hide='vm.maps.length === 0'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
