--- a/www/index.html
+++ b/www/index.html
@@ -125,6 +125,7 @@
     <script src="app/shared/helpers.factory.js"></script>
     <script src="app/shared/livedb.factory.js"></script>
     <script src="app/shared/localstorage.factory.js"></script>
+    <script src="app/spot/data/external-data.factory.js"></script>
     <script src="app/spot/images/image.factory.js"></script>
     <script src="app/spot/minerals/minerals.factory.js"></script>
     <script src="app/spot/spot/spot.factory.js"></script>
