--- a/www/app/spot/data/data-tab.directive.html
+++ b/www/app/spot/data/data-tab.directive.html
@@ -24,19 +24,21 @@
 		</ion-item>
 	</ion-list>
 	<div class="item item-divider">CSV Files</div>
-	<ion-item ng-show="vmChild.isWeb()" class="button-text-big " ng-click='vmChild.importData()' ng-model='vmChild.importItem'>
+	<ion-item ng-show="vmChild.isWeb()" class="button-text-big " ng-click='vmChild.importData()' 
+		ng-model='vmChild.importItem'>
 		<img class='strabo-icon' type='file' id='file' src='img/import-project.png'> Import CSV File
 	</ion-item>
 	<div class="padding" ng-hide="vm.spot.properties.data || vm.spot.properties.data.json">
 		There are no CSV files to display
 	</div>
 	<ion-list ng-show="vm.spot.properties.data && vm.spot.properties.data.csv">
-		<ion-item class='item-text-wrap item-button-right' ng-repeat="csvFile in vm.spot.properties.data.csv | orderBy: 'fileName' track by $index ">
-			<div ng-click="vmChild.viewCSVFile(csvFile)" class="list-sub">
-				<b>{{csvFile.fileName}}</b>
+		<ion-item class='item-text-wrap item-button-right' 
+			ng-repeat="csvFileId in vm.spot.properties.data.csv | orderBy: 'fileNameId' track by $index ">
+			<div ng-click="vmChild.viewCSVFile(csvFileId)" class="list-sub">
+				<b>{{csvFileId}}</b>
 			</div>
 			<div class="buttons">
-				<button class='button button-clear button-assertive' ng-click='vmChild.deleteCSV(csvFile)'>
+				<button class='button button-clear button-assertive' ng-click='vmChild.deleteCSV(csvFileId)'>
 					<i class='icon ion-minus-circled'></i>
 				</button>
 			</div>
