commented out code to generate random spots

--- a/www/app/misc/misc.directive.html
+++ b/www/app/misc/misc.directive.html
@@ -8,7 +8,7 @@
     <input type='text' ng-model='vm.dbUrl'>
   </ion-input>
 
-  <div class='field-group item item-divider'>
+  <!-- <div class='field-group item item-divider'>
     Generate Random Spots
   </div>
   <div class='padding'>
@@ -22,7 +22,7 @@
           class='button button-clear button-positive padding-left'>
     <i class='icon ion-grid'></i>
     <span class='button-text-big'>Start</span>
-  </button>
+  </button> -->
 
   <div class='padding' ng-show='vm.msg'>
     {{ vm.msg }}
