Misc: Added testing mode disclaimer

--- a/www/app/misc/misc.directive.html
+++ b/www/app/misc/misc.directive.html
@@ -38,6 +38,7 @@
     ng-click='vm.toggleTestingMode()'>
     <span class='toggle-left-label'>Turn on Testing Mode</span>
   </ion-toggle>
+  <p class="padding">Data saved under pages marked "Testing Only" is for <b>TESTING PURPOSES ONLY</b> and may not be compatible with future versions of Strabo Spot.</p>
 
   <div class='field-group item item-divider'>
     View Spot Data Model
